# rust_study

./: Cargo.toml  README.md  my_database.db
doc/: 01_sqlite.md  02_sqlx_sqlite.md
src/: main.rs
